--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fani Gallegos</title>
+        <link rel="shortcut icon" href="assets/libro.jfif" type="image/x-icon">
 
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -191,12 +192,6 @@
                     <p>Domina el solfeo con este curso y lleva tu música al siguiente nivel. Aprende a leer partituras,
                         interpretar melodías con precisión y mejorar tu expresión musical. ¡Desbloquea tu potencial hoy!
                     </p>
-                    <a href="#" class="icon-link">
-                        Call to action
-                        <svg class="bi">
-                            <use xlink:href="#chevron-right"></use>
-                        </svg>
-                    </a>
                 </div>
 
                 <div class="feature col">
@@ -209,12 +204,6 @@
                         dominio musical. ¡Potencia tu
                         talento y confianza hoy mismo!
                     </p>
-                    <a href="#" class="icon-link">
-                        Call to action
-                        <svg class="bi">
-                            <use xlink:href="#chevron-right"></use>
-                        </svg>
-                    </a>
                 </div>
 
                 <div class="feature col">
@@ -226,12 +215,6 @@
                     <p>Establecerás rutinas de práctica, mantenerás un enfoque constante y gestionarás tu tiempo
                         eficientemente, mejorando así tu técnica y rendimiento. ¡Avanza con confianza!
                     </p>
-                    <a href="#" class="icon-link">
-                        Call to action
-                        <svg class="bi">
-                            <use xlink:href="#chevron-right"></use>
-                        </svg>
-                    </a>
                 </div>
 
             </div>
@@ -239,33 +222,34 @@
 
 
         <section id="Testimonios">
-                <h1 class="text-center my-5">Testimonios</h1>
+            <h1 class="text-center my-5">Testimonios</h1>
             <div id="myCarousel" class="carousel carousel-dark slide mb-6 pointer-event" data-bs-theme="dark"
                 data-bs-ride="carousel">
 
                 <div class="carousel-inner">
 
-                    <div class="carousel item">
+                    <div class="carousel-item">
                         <article class="container text-center">
-                            <img class="rounded-5" height="400" src="assets/" alt="Citlaly Muñoz">
+                            <img class="circulo-1" height="300" src="assets/Testimonio 2.jpeg" alt="Citlaly Muñoz">
                             <h3> Citlaly Muñoz</h3>
-                            <p>Soy fan de ti, tocas muy bointo y vas a llegar muy lejos</p>
+                            <p>Es una persona disciplinada, valiente y tenaz, he podido evidenciar sus resultados como
+                                artista en cada uno de sus recitales a los que he asistido</p>
                         </article>
                     </div>
 
                     <div class="carousel-item active">
                         <article class="container text-center">
-                            <img class="rounded-9" height="300" src="assets/Testimonio 1.jpeg" alt="Alan Macias">
+                            <img class="circulo-2" height="300" src="assets/Testimonio 1.jpeg" alt="Alan Macias">
                             <h3> Alan Macias</h3>
-                            <p>Yo siempre practicaba por mi cuenta pero Fani me ayudó a mejorar muchísimo mu técnica y
+                            <p>Yo siempre practicaba por mi cuenta pero, Fani me ayudó a mejorar muchísimo mi técnica y
                                 teoría armónica en poco tiempo</p>
                         </article>
                     </div>
 
 
-                    <div class="carousel item">
+                    <div class="carousel-item">
                         <article class="container text-center">
-                            <img class="rounded-5" height="400" src="assets/" alt="Dana Gallegos">
+                            <img class="circulo-3" height="350" src="assets/Testimonio 3.jpeg" alt="Dana Gallegos">
                             <h3> Dana Gallegos</h3>
                             <p>Haces cosas increibles cuando confías 100% en tí</p>
                         </article>
@@ -294,7 +278,8 @@
             <i class="bi bi-music-note-beamed"></i>
         </p>
 
-        <h6 class="text-white text-center mb-3">"El piano es mi voz, . . . puedo contar historias sin necesidad de palabras"
+        <h6 class="text-white text-center mb-3">"El piano es mi voz, . . . puedo contar historias sin necesidad de
+            palabras"
         </h6>
 
         <ul class="nav justify-content-center border-bottom pb-3 mb-3">
@@ -310,14 +295,14 @@
                 </a>
             </li>
 
-            <li class="nav-item"><a href="fanigallegos476@gmail.com" target="_blank"
+            <li class="nav-item"><a href="mailto:fanigallegos476@gmail.com" target="_blank"
                     class="nav-link px-5 text-body-secondary">
                     <i class="bi bi-envelope-at fs-2"></i>
                 </a>
             </li>
 
         </ul>
-        <p class="text-center text-body-secondary">© 2024 Fani, TECNOLOCHICAS PRO</p>
+        <p class="text-center text-body-secondary">©2024 Fani, TECNOLOCHICAS PRO</p>
     </footer>
 
 
